--- a/frontend/src/pages/GamePage/game-page.css
+++ b/frontend/src/pages/GamePage/game-page.css
@@ -91,6 +91,7 @@ div.chat-messages {
   background-size: cover!important;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 div.chat-messages::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
@@ -111,8 +112,29 @@ div.chat-messages::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0,0,0,.35);
 }
 
+div.main-chat-messages-wrapper {
+  position: relative;
+  flex: 1;
+  display: flex;
+  overflow: hidden;
+}
+div.chat-messages-background {
+  position: absolute;
+  width: 150%;
+  height: 150%;
+  top: -10px;
+  left: -10px;
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -o-filter: blur(3px);
+  -ms-filter: blur(3px);
+  filter: blur(3px);
+}
 
-
+div.chat-messages {
+  -webkit-backdrop-filter: blur(10px)!important;
+  backdrop-filter: blur(10px)!important;
+}
 
 
 div.single-message {
@@ -225,9 +247,10 @@ div.single-message.chat-message > div.message-wrapper div.single-message-text {
   font-size: 12px;
 }
 
-div.message-wrapper > div.message-text {
+div.message-wrapper > div.message-info > div.message-text {
   display: inline-block;
   max-width: 100%;
+  width: 100%;
 }
 
 
